Issue with flex fixed with align-item stretch

--- a/src/Camplogin.css
+++ b/src/Camplogin.css
@@ -107,7 +107,7 @@ form button{
     margin: 60px auto;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: stretch;
     flex-wrap: wrap;
     gap: 29px;
     width: 100%;
